--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7b79aa">  <td>25/10/23 12:15:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.test.LoginTest@24569dba]">&gt;&gt;setUp</td> 
+<tr bgcolor="fa7761">  <td>25/10/23 14:09:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.test.LoginTest@7d9d0818]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="7b79aa">  <td>25/10/23 12:16:07</td>   <td>59249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.test.LoginTest@24569dba]">&lt;&lt;tearDown</td> 
+<tr bgcolor="fa7761">  <td>25/10/23 14:10:18</td>   <td>49118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.test.LoginTest@7d9d0818]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="63b786">  <td>25/10/23 12:15:21</td>   <td>13865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testValidLogin()[pri:0, instance:com.test.LoginTest@24569dba]">testValidLogin</td> 
+<tr bgcolor="abcebf">  <td>25/10/23 14:09:40</td>   <td>11678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testValidLogin()[pri:0, instance:com.test.LoginTest@7d9d0818]">testValidLogin</td> 
   <td>main@1159190947</td>   <td></td> </tr>
 </table>
